--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -22,6 +22,6 @@
 
     "baseUrl": "./src"
   },
-  "include": ["src"],
+  "include": ["src", "external.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
